ODK-184 fix menu overlap

--- a/src/main/resources/static/css/simplesidebar.css
+++ b/src/main/resources/static/css/simplesidebar.css
@@ -23,7 +23,7 @@
 }
 
 #sidebar-wrapper {
-    z-index: 1000;
+    z-index: 500;
     position: fixed;
     left: 250px;
     width: 0;
